Layout bug fixes

--- a/src/components/Layout/ChangeArrow/ChangeArrow.css
+++ b/src/components/Layout/ChangeArrow/ChangeArrow.css
@@ -1,5 +1,6 @@
 
 .nextArrow {
+
     background-image: url('../../../assets/images/nextarrow.png');
     background-size: auto;
     width: 60.02px;
@@ -8,6 +9,7 @@
     top: 80vh;
     left: 65vw;
     transition: top,left 1s;
+
 }
 
 
@@ -424,4 +426,11 @@
     left: 50%;
     transition: all 1s;    
 
+}
+
+.nextArrowUpDown {
+
+    position: absolute;
+    top: 900px;
+    transition: top 1s;
 }
